[tool.poetry]
name = "coding-samples"
version = "0.1.0"
description = "Small AWS Lambda Function written in Python"
authors = ["Eric Oppermann"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
